# accounting-system

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
docs/doxygen/: Doxyfile
src/: CMakeLists.txt  account.cpp  account.hpp  main.cpp  operation.cpp  operation.hpp
tests/: CMakeLists.txt  account_test.cpp
